--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
     
         <div class="flex flex-col mt-6 space-y-3 lg:space-y-0 lg:flex-row">
             
-            <a href="#" class="block px-3 py-2 text-sm font-semibold text-center text-gray-700 transition-colors duration-200 transform bg-gray-200 rounded-md lg:mx-4 hover:bg-gray-300">Progress updates on Twitter</a>
+            <a href="https://twitter.com/jeffbarry" class="block px-3 py-2 text-sm font-semibold text-center text-gray-700 transition-colors duration-200 transform bg-gray-200 rounded-md lg:mx-4 hover:bg-gray-300">Progress updates on Twitter</a>
         </div>
     </section>
 </main>        
